--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -9,7 +9,7 @@
 
     <p>Our Match Centre provides head to head widgets of both teams, which allows you to see the perspective of both sides during the match. A widget for the match #hashtag is also shown – join in the match conversation. The match centre will be updated before each round of major matches and is a great way to follow live score and key action updates on the internet.*</p>
     
-    <p>To help the site develop please follow <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> and suggest new Rugby Twitter accounts for us to add to the site. For longer comments and enquiries, please send an e-mail to <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a>.</p>
+    <p>To help the site develop please follow <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> and suggest new Rugby Twitter accounts for us to add to the site. For longer comments and enquiries, please send an e-mail to <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a>.**</p>
 
     <br>
     <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo.png")"></img></div><div class="span3"></div>
@@ -17,12 +17,13 @@
     <br></br>
     <p><small>*We cannot guarantee that all teams will publish updates for all matches but the official accounts of club and international sides are increasingly Tweeting during games – it is a great way to follow the action.</small></p>
     <br>
+    <p><small>**It is possible that some Twitter accounts may not be active or the official account of the rugby personality mentioned. We do what we can to avoid these errors but please do not hesitate to contact <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a> if you spot any inaccuracies or if you have any comments / questions regarding the content listed on the site.  </small></p>
+    
     </div>
 
   <div class="span4"> 
-  <p><strong>Featured</strong></p>
   
-    <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/search?q=%23rugby" data-widget-id="277844769160429571">Tweets about "#rugby"</a></div>
+    <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/FollowRugbySite" data-widget-id="320940036453449730"></a></div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
   </div>
