--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,13 +10,19 @@
             <strong>Done!</strong> @message
         </div>
     }
+    
+    @flash.get("error").map { message =>
+        <div class="alert alert-error">
+            <strong>Oops!</strong> @message
+        </div>
+    }
     <p class="lead">Follow Rugby lists rugby Twitter accounts in relevant categories and displays their real time updates on each page.</p>
 
     <p>Click on the headings above to see the latest Tweets of top players, clubs, national unions, competitions, journalists, broadcasters and other major names in rugby.</p>
     
     <p>On game day the Match Centre shows live international and club rugby updates for both teams and the match #hashtag so you can easily join in the conversation.</p>
 
-    <p>Interact as you would on Twitter and please contact<a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> if you have any comments or suggestions!</p>
+    <p>Interact as you would on Twitter and please contact <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> if you have any comments or suggestions!</p>
     <br></br>
     <p class="text-center"><strong>More to Follow. We hope you enjoy the site.</strong></p>
     <br>
@@ -27,7 +33,6 @@
   
  
   <div class="span4"> 
-  <p><strong>Featured</strong></p>
   
 		<div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/search?q=%23rugby" data-widget-id="277844769160429571">Tweets about "#rugby"</a></div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
