--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
   <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
   <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-  <script src="@routes.Assets.at("javascripts/bootstrap-dropdown.js")" type="text/javascript"></script>
+  <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
 <script src="https://platform.twitter.com/widgets.js" type="text/javascript"></script>
 
    <style type="text/css">
