Fixed email issue, changed some text.

--- a/app/views/categories.scala.html
+++ b/app/views/categories.scala.html
@@ -11,6 +11,8 @@
         <li><a href="@routes.Application.selectTeam(category.id.get, team.id.get)">@team.name</a></li>
         }
       </ul>
+      <br></br>
+      <p><small>Suggest further Twitter profiles by tweeting <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a></small></p>
     </div>
   </div>
   <div class="span5">
