--- a/app/views/comingSoon.scala.html
+++ b/app/views/comingSoon.scala.html
@@ -23,7 +23,7 @@
 
   <div class="span4"> 
   
-    <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/search?q=%23rugby" data-widget-id="277844769160429571">Tweets about "#rugby"</a></div>
+    <div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/search?q=%23FollowRugby" data-widget-id="321604771222011904">Tweets about "#rugby"</a></div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
   </div>
