--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -5,9 +5,9 @@
   <div class="span8">
     <p class="lead">Follow Rugby has been designed to make it easier for anyone interested in rugby to follow its key developments on Twitter.</p>
 
-    <p>The data has been organised into relevant widget groupings so you can see the latest real time updates - simply interact as you would on Twitter: follow, mention, reply, retweet, favorite etc!</p>
+    <p>Rugby Twitter profiles have been organised into relevant groupings - please browse and interact as you would normally on Twitter: follow, mention, reply, re-tweet, favorite etc!</p>
 
-    <p>Our Match Centre provides head to head widgets of both teams, which allows you to see the perspective of both sides during the match. A widget for the match #hashtag is also shown – join in the match conversation. The match centre will be updated before each round of major matches and is a great way to follow live score and key action updates on the internet.*</p>
+    <p>The Match Centre shows the Twitter feeds of both teams that are participating in matches from leading global rugby competitions. This allows you to see the perspective of both sides during a match. There is also a third feed for the match #hashtag – please join in the match conversation. The Match Centre will be updated before each round of major matches and is a great way to follow the action and keep up with live scores on the internet.* </p>
     
     <p>To help the site develop please follow <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a> and suggest new Rugby Twitter accounts for us to add to the site. For longer comments and enquiries, please send an e-mail to <a href="mailto:ap@@follow-rugby.com">ap@@follow-rugby.com</a>.**</p>
 
