--- a/app/views/competition.scala.html
+++ b/app/views/competition.scala.html
@@ -11,6 +11,11 @@
 @lionsCompForm.globalError.map { error =>
   <div class="alert alert-error">@error.message</div>
 }
+  <div class="row">
+    <div class="span8"></div><div class="span4"><span class='st_twitter_large' displayText='Tweet'></span>
+<span class='st_facebook_large' displayText='Facebook'></span>
+<span class='st_linkedin_large' displayText='LinkedIn'></span>
+<span class='st_email_large' displayText='Email'></span></div></div>
     <h2 class="text-center">British and Irish Lions 2013 Squad Competition</h2>
     <br></br>
     <p class="lead">To celebrate the launch of www.Follow-Rugby.com we have created a competition to end the greatest rugby debate of the year. Which players will be chosen to tour Australia with the 2013 British and Irish Lions?</p>
@@ -37,7 +42,8 @@
     <p>The two entrants with the highest points totals will each receive an <stronger>official Adidas British and Irish 2013 Lions shirt!</stronger></p>
     <br></br>
     <p class="text-center text-info">We hope you enjoy www.Follow-Rugby.com. Take a look through the site and please contact us with your comments and suggestions of other rugby Twitter accounts by following and tweeting our own official Twitter account <a href="https://www.twitter.com/intent/user?screen_name=FollowRugbySite">@@FollowRugbySite</a>.</p>
-    <br></br>
+
+  <br></br>
  
 <!-- Modal -->
 <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
