--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -27,13 +27,16 @@
     <p class="text-center"><strong>More Rugby to Follow.</strong></p>
     <br>
     <div class="span3"></div><div class="span2"><img src="@routes.Assets.at("images/logo.png")"></img></div><div class="span3"></div>
-  
+    
 
   </div>
   
  
   <div class="span4"> 
-  
+    <span class='st_twitter_large' displayText='Tweet'></span>
+<span class='st_facebook_large' displayText='Facebook'></span>
+<span class='st_linkedin_large' displayText='LinkedIn'></span>
+<span class='st_email_large' displayText='Email'></span>
 		<div class="widget-frame"><a class="twitter-timeline" href="https://twitter.com/search?q=%23rugby" data-widget-id="277844769160429571">Tweets about "#rugby"</a></div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
