--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,6 +13,9 @@
   <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
   <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
 <script src="https://platform.twitter.com/widgets.js" type="text/javascript"></script>
+<script type="text/javascript">var switchTo5x=true;</script>
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">stLight.options({publisher: "085bb082-039f-4f04-9248-316d1eb48f12", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 
    <style type="text/css">
       body {
